--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,27 @@
 <doctype html>
 
-<html>
+<html lang="en">
     <head>
         <title>My Personal Website - Isaac Francis</title>
     </head>
 
     <body>
         <h1>Website - CV - Isaac Francis</h1>
+        <h2>Website - CV - Isaac Francis</h2>
+
+        <p>Navigation</p>
+
+        <p>Intro</p>
+        <p>Education</p>
+        <p>Experiments</p>
+        <p>Hobbies</p>
+
+        <ul>
+            <li>Intro</li>
+            <li>Education</li>
+            <li>Experiments</li>
+            <li>Hobbies</li>
+        </ul>
+
     </body>
 </html>
